# tmxpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: Findtinyxml2.cmake  Findzstd.cmake
include/: neotmx.hpp  tmxpp.hpp
src/: abstract_layer.cpp  image.cpp  image_layer.cpp  layer.cpp  map.cpp  object.cpp  object_group.cpp  properties.cpp  text.cpp  tile.cpp  tile_layer.cpp  tileset.cpp  utility.cpp
test/: base64.cpp  basic.cpp  external_tileset.cpp
test/assets/: pf1.tmx  pf1_base64.tmx  pf1_external.tmx  pf1_external.tsx  pf1_gzip.tmx  pf1_zlib.tmx  pf1_zstd.tmx
